--- a/RowingMachine-MVP/src/main/resources/templates/fragments/rightSidebar.html
+++ b/RowingMachine-MVP/src/main/resources/templates/fragments/rightSidebar.html
@@ -13,7 +13,7 @@
 						<div class="col fs-5" style="width:50px;"
 							th:classappend="${#strings.isEmpty(quiz.userAnswer)} ? '' : bg-secondary">
 							<a th:text="${#strings.length(quiz.rno) == 1 ? '0' + quiz.rno : quiz.rno}"
-								th:onclick="moveQuiz([[${quiz.subjectTypeCd}]], [[${quiz.srtNo}]])"></a>
+								th:onclick="|movePage('${quiz.quizMstrInfoSeq}')|"></a>
 							<input type="hidden" th:value="${quiz.rno}" class="sideRno">
 							<input type="hidden" th:value="${quiz.quizMstrInfoSeq}" class="quizMstrInfoSeq">
 						</div>
