--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
@@ -43,11 +43,17 @@
 					
 					<div class="my-3 d-flex justify-content-between align-items-center">
 						<div class="fs-4 fw-bold " style="font-family: 'NEXON Lv1 Gothic OTF Bold';">
-							<span th:text="${quizMstrInfoVO.subjectTypeNm}"></span>
-							<!-- <span th:text="${#strings.length(quizMstrInfoVO.srtNo) == 1 ? '0' + quizMstrInfoVO.srtNo : quizMstrInfoVO.srtNo}"></span> -->
-							<th:block th:each="quiz:${quizResultList}" th:if="${quiz.quizMstrInfoSeq == quizMstrInfoVO.quizMstrInfoSeq}">
-								<span th:text="${#strings.length(quiz.rno) == 1 ? '0' + quiz.rno : quiz.rno}"></span>
-							</th:block>
+							<div>
+								<span th:text="${quizMstrInfoVO.examYear}"></span>
+								<span th:text="${quizMstrInfoVO.examGrpNm}"></span>
+								<span th:text="|${quizMstrInfoVO.examNo}회|"></span>
+							</div>
+							<div>
+								<span th:text="${quizMstrInfoVO.subjectTypeNm}"></span>
+								<th:block th:each="quiz:${quizResultList}" th:if="${quiz.quizMstrInfoSeq == quizMstrInfoVO.quizMstrInfoSeq}">
+									<span th:text="${#strings.length(quiz.rno) == 1 ? '0' + quiz.rno : quiz.rno}"></span>
+								</th:block>
+							</div>
 						</div>
 						<div>
 							<button type="button" class="btn btn-primary mx-3" onclick="toggleCmntr();">해설</button>
@@ -73,7 +79,7 @@
 							<div class="text-start my-3 exDiv">
 								<i class="fas fa-eraser" onclick="eraser(this);"></i>
 								<a class="list-group-item list-group-item-action"
-									th:classappend="${quizMstrInfoVO.userAnswer} == ${dtlInfo.quizMstrDtlSeq} ? list-group-item-dark"
+									th:classappend="${quizMstrInfoVO.userAnswer} == ${dtlInfo.srtNo} ? list-group-item-dark"
 									onclick="chkAnswer(this);">
 									<span class="fw-bold mx-1" th:if="${dtlInfo.srtNo == 1}">&#9312;</span>
 									<span class="fw-bold mx-1" th:if="${dtlInfo.srtNo == 2}">&#9313;</span>
@@ -82,10 +88,12 @@
 									<span class="fw-bold mx-1" th:if="${dtlInfo.srtNo == 5}">&#9316;</span>
 									<span class="exCntnt mx-1" th:text="${dtlInfo.content}"
 										th:classappend="${dtlInfo.eraseYn} == 'Y' ? text-decoration-line-through"></span>
-									<input type="hidden" class="quizMstrDtlSeq"
-										th:name="|quizMstrDtlList[${dtlInfoStat.index}].quizMstrDtlSeq|" th:value="${dtlInfo.quizMstrDtlSeq}"/>
-									<input type="hidden" class="eraseYn"
-										th:name="|quizMstrDtlList[${dtlInfoStat.index}].eraseYn|" th:value="${dtlInfo.eraseYn}"/>
+									<input type="hidden" th:name="|quizMstrDtlList[${dtlInfoStat.index}].quizMstrDtlSeq|" 
+										th:value="${dtlInfo.quizMstrDtlSeq}"/>
+									<input type="hidden" th:name="|quizMstrDtlList[${dtlInfoStat.index}].srtNo|" 
+										th:value="${dtlInfo.srtNo}" class="dtlInfoSrtNo"/>
+									<input type="hidden" th:name="|quizMstrDtlList[${dtlInfoStat.index}].eraseYn|"
+										 th:value="${dtlInfo.eraseYn}" class="eraseYn"/>
 									<input type="hidden" th:name="|quizMstrDtlList[${dtlInfoStat.index}].quizUserAnsDtlSeq|"
 										th:value="${dtlInfo.quizUserAnsDtlSeq}" />
 								</a>
