--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
@@ -72,6 +72,7 @@
 					<i class="fas fa-home fa-3x" onclick="location.replace('/quiz/index.do');"></i>
 				</div>
 			</div>
+			<p>* 시험연도, 시험유형, 시험회차, 시험과목을 선택해주세요.</p>
 			
 			<div id="quizCntntDiv">
 				<div class="d-flex flex-column justify-content-between border px-5 py-3">
@@ -84,7 +85,7 @@
 								var Editor = toastui.Editor;
 								var editorCntnt = new Editor({
 									  el: document.querySelector('#editorCntnt'),
-									  height: '400px',
+									  height: '400px'
 									});
 							</script>
 						</div>
@@ -94,7 +95,7 @@
 							<script>
 								var editorCmntr = new Editor({
 									  el: document.querySelector('#editorCmntr'),
-									  height: '400px',
+									  height: '400px'
 									});
 							</script>
 						</div>
@@ -188,6 +189,9 @@
 </div>
 
 <th:block layout:fragment="script">
+	<script>
+		$('#quizCntntDiv').hide();
+	</script>
 	<script th:src="@{/js/quiz/quizFunc.js}"></script>
 </th:block>
 
