보기별 해설 추가

--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/admin/quizForm.html
@@ -105,13 +105,18 @@
 						</div>
 					</div>
 					<div>
-						<div class="text-start my-3 d-flex align-items-center">
+						<div class="my-3 d-flex align-items-center">
 							<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9312;</span>
 							<input type="hidden" name="quizMstrDtlList[0].srtNo" value="1"/>
 							<textarea class="w-100 px-3 py-2 mx-4" style="height:110px"
 								name="quizMstrDtlList[0].content" th:text="${quizMstrInfoVO.quizMstrDtlList[0].content}"></textarea>
 							<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[0].quizMstrDtlSeq}"
 								name="quizMstrDtlList[0].quizMstrDtlSeq" />
+						</div>
+						<div class="ml-5 my-3 d-flex align-items-center justify-content-end">
+							<button type="button" class="btn btn-primary">해설</button>
+							<textarea class="w-75 px-3 py-2 mx-4" style="height:100px"
+								name="quizMstrDtlList[0].cmntr" th:text="${quizMstrInfoVO.quizMstrDtlList[0].cmntr}"></textarea>
 						</div>
 						<div class="text-start my-3 d-flex align-items-center">
 							<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9313;</span>
@@ -121,6 +126,11 @@
 							<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[1].quizMstrDtlSeq}"
 								name="quizMstrDtlList[1].quizMstrDtlSeq" />
 						</div>
+						<div class="ml-5 my-3 d-flex align-items-center justify-content-end">
+							<button type="button" class="btn btn-primary">해설</button>
+							<textarea class="w-75 px-3 py-2 mx-4" style="height:100px"
+								name="quizMstrDtlList[1].cmntr" th:text="${quizMstrInfoVO.quizMstrDtlList[1].cmntr}"></textarea>
+						</div>
 						<div class="text-start my-3 d-flex align-items-center">
 							<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9314;</span>
 							<input type="hidden" name="quizMstrDtlList[2].srtNo" value="3"/>
@@ -128,6 +138,11 @@
 								name="quizMstrDtlList[2].content" th:text="${quizMstrInfoVO.quizMstrDtlList[2].content}"></textarea>
 							<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[2].quizMstrDtlSeq}"
 								name="quizMstrDtlList[2].quizMstrDtlSeq" />
+						</div>
+						<div class="ml-5 my-3 d-flex align-items-center justify-content-end">
+							<button type="button" class="btn btn-primary">해설</button>
+							<textarea class="w-75 px-3 py-2 mx-4" style="height:100px"
+								name="quizMstrDtlList[2].cmntr" th:text="${quizMstrInfoVO.quizMstrDtlList[2].cmntr}"></textarea>
 						</div>
 						<div class="text-start my-3 d-flex align-items-center">
 							<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9315;</span>
@@ -137,6 +152,11 @@
 							<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[3].quizMstrDtlSeq}"
 								name="quizMstrDtlList[3].quizMstrDtlSeq" />
 						</div>
+						<div class="ml-5 my-3 d-flex align-items-center justify-content-end">
+							<button type="button" class="btn btn-primary">해설</button>
+							<textarea class="w-75 px-3 py-2 mx-4" style="height:100px"
+								name="quizMstrDtlList[3].cmntr" th:text="${quizMstrInfoVO.quizMstrDtlList[3].cmntr}"></textarea>
+						</div>
 						<div class="text-start my-3 d-flex align-items-center">
 							<span class="fw-bold mx-1 fs-3" style="font-family: 'NEXON Lv1 Gothic OTF Bold';">&#9316;</span>
 							<input type="hidden" name="quizMstrDtlList[4].srtNo" value="5"/>
@@ -144,6 +164,11 @@
 								name="quizMstrDtlList[4].content" th:text="${quizMstrInfoVO.quizMstrDtlList[4].content}"></textarea>
 							<input type="hidden" class="quizMstrDtlSeq" th:value="${quizMstrInfoVO.quizMstrDtlList[4].quizMstrDtlSeq}"
 								name="quizMstrDtlList[4].quizMstrDtlSeq" />
+						</div>
+						<div class="ml-5 my-3 d-flex align-items-center justify-content-end">
+							<button type="button" class="btn btn-primary">해설</button>
+							<textarea class="w-75 px-3 py-2 mx-4" style="height:100px"
+								name="quizMstrDtlList[4].cmntr" th:text="${quizMstrInfoVO.quizMstrDtlList[4].cmntr}"></textarea>
 						</div>
 					</div>
 				</div>
